styles/components/about.css
.main {
  display: flex;
}

.gap--1 {
  flex: 0.3;
  min-width: 2rem;
}

.gap--2 {
  flex: 0.3;
  min-width: clamp(1.3rem, 6.5vw, 4rem);
}

.main__content {
  flex: 5;
  margin: 5rem 0rem;
}

/*                    Background                */

.background {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

.background__details {
  flex: 11;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  padding: 1rem 0;
}

.background__info-container {
  flex: 2;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  /* overflow-y: auto; */
}

.background__info-line {
  width: 100%;
}

.background__info {
  max-width: 60ch;
  color: var(--clr-slate600);
  font-size: var(--size-xl);
}

.background__info-role {
  color: var(--clr-indigo);
}

.background__photo {
  flex: 2;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  width: 100%;
  justify-content: center;
  align-items: center;
  padding-top: 3rem;
}

.background__photo-img {
  border: 1px solid gray;
  overflow: hidden;
  border-radius: 5px;
}

.background__photo-img {
  max-width: 100%;
  height: auto;
  object-fit: cover;
}

.background__photo-role {
  color: var(--clr-slate600);
  font-size: var(--size-lg);
}

.background__quote {
  flex: 1;
  text-align: center;
  line-height: 2rem;
  /* font-size: var(--size-base); */
}

.background__cite {
  /* border: 1px solid red; */
  /* width: min-content;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0 1rem; */
}

.background__cite-emoji {
  margin-bottom: -0.5rem;
  margin-left: 0.5rem;
}

@media (min-width: 320px) {
  .background__info-container {
    /* overflow-y: auto; */
  }
}

@media (min-width: 475px) {
  .background {
    margin-bottom: 5rem;
  }

  .background__details {
    padding: 0;
  }

  .background__photo {
    gap: 0;
    padding-top: 0;
  }
}

@media (max-width: 475px) {
  /* .background__info-container {
    overflow-y: auto;
  } */

  .background {
    overflow-y: auto;
  }
}

@media (min-width: 576px) {
  .background__details {
    padding: 1rem 0;
  }

  .background__photo {
    gap: 2rem;
  }
}

@media (min-width: 768px) {
  .background {
    margin-bottom: 0rem;
  }
}

@media (min-width: 1200px) {
  .background__details {
    padding: 0;
    flex-direction: row;
  }

  .background__photo {
    height: 29rem;
  }
}

@media screen and (orientation: landscape) {
  .background__info-container {
    /* overflow-y: auto; */
  }
}

